--- a/pages/shop/goods/goods.wxss
+++ b/pages/shop/goods/goods.wxss
@@ -84,7 +84,7 @@ swiper-item image {
   text-decoration: line-through;
 }
 
-.title_h1>.jj {
+.title_h1>.cs {
   background: #F2A86F;
   border-radius: 5px;
   padding: 4rpx 12rpx;
@@ -98,7 +98,7 @@ swiper-item image {
   padding-right: 42rpx;
 }
 
-.title_h1>.jj>image {
+.title_h1>.cs>image {
   width: 20rpx;
   height: 20rpx;
   position: absolute;
@@ -144,7 +144,15 @@ swiper-item image {
   line-height: 50rpx;
   padding-right: 1em;
 }
-
+.title_2 > view{
+  margin-right: 30rpx;
+}
+.title_2 > .jj{
+   background-color: #595541;
+   color: #C1AA85;
+   padding: 0 14rpx;
+   border-radius: 6rpx;
+}
 .set_page {
   /* margin-top: 20rpx; */
   display: flex;
