--- a/pages/shop/site/add.wxml
+++ b/pages/shop/site/add.wxml
@@ -12,7 +12,7 @@
     <view>
       <view>地址</view>
      <input name="location" style="display:none" type="text" placeholder="请输入收货地址" value="{{address||info.location}}"  /> 
-      <picker mode="region" bindchange="bindRegionChange" custom-item="请选择">
+      <picker mode="region" bindchange="bindRegionChange">
         <view class="picker">
          {{address||info.location||'请选择省市区'}}
         </view>
