--- a/pages/cart2/index.wxml
+++ b/pages/cart2/index.wxml
@@ -8,10 +8,10 @@
   </view>
   <view class="goods_list t20">
     <view class="goods" wx:for="{{list}}" wx:key="index">
-      <view wx:if="{{status==0}}" class="icon" bindtap="count" data-index="{{index}}">
+      <view wx:if="{{status==0}}" class="icon {{item.status?'no_border':''}}" bindtap="count" data-index="{{index}}">
         <icon wx:if="{{item.status}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
       </view>
-      <view wx:if="{{status==1}}" class="icon" bindtap="setgoods" data-index="{{index}}">
+      <view wx:if="{{status==1}}" class="icon {{item.set?'no_border':''}}" bindtap="setgoods" data-index="{{index}}">
         <icon wx:if="{{item.set}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
       </view>
       <view class="goods_logo">
@@ -36,9 +36,9 @@
 </view>
 <view class="btn"  wx:if="{{list.length>0}}">
   <view class="btn_l">
-    <view class="icon" bindtap="all">
-      <icon wx:if="{{statuAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
-      <icon wx:if="{{delAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
+    <view class="icon {{status==0?(statuAll?'no_border':''):(delAll?'no_border':'')}}" bindtap="all">
+      <icon wx:if="{{status==0&&statuAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
+      <icon wx:if="{{status==1&&delAll}}" type="success" size="20" color="RGBA(194, 179, 135, 1)" />
     </view>
     <view class="quanxuan">
       全选
