--- a/app.wxss
+++ b/app.wxss
@@ -86,3 +86,11 @@ image {
     width: 100%;
     background: #fff;
 } 
+.bottom_shadow{
+  position: fixed;
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: -3px;
+  box-shadow:0px -4rpx 10rpx 0px rgba(77,77,77,0.1);
+}
