--- a/components/cart/cart.wxss
+++ b/components/cart/cart.wxss
@@ -48,15 +48,14 @@
   padding: 0 48rpx;
   align-items: center;
   box-sizing: border-box;
-  width: 430rpx;
+  width: 430rpx!important;
   background: rgba(194, 179, 135, 1);
   border-radius: 35px;
-  line-height: 70rpx;
   font-size: 32rpx;
   font-family: PingFang-SC-Bold;
   color: rgba(255, 255, 255, 1);
   font-weight: 600;
-  line-height: 70rpx;
+  margin-top: 0!important;
 }
 
 .jiange {
