--- a/pages/index/search/search.wxss
+++ b/pages/index/search/search.wxss
@@ -92,7 +92,7 @@
   font-family: PingFang-SC-Medium;
   color: rgba(102, 102, 102, 1);
   padding: 12rpx 20rpx;
-  border-radius: 10px;
+  border-radius: 10rpx;
   border: 1px solid rgba(102, 102, 102, 1);
   display: inline;
   margin-top: 20rpx;
