--- a/components/cart/cart.wxss
+++ b/components/cart/cart.wxss
@@ -9,6 +9,7 @@
   align-items: center;
   background: #fff;
   z-index: 9;
+  box-shadow:0px -4rpx 10rpx 0rpx rgba(77,77,77,0.1);
 }
 
 .iphonex {
@@ -57,7 +58,9 @@
   font-weight: 600;
   margin-top: 0!important;
 }
-
+.affair view{
+  font-size: 32rpx;
+}
 .jiange {
   width: 2rpx;
   height: 30rpx;
