--- a/pages/shop/goods/goods.wxml
+++ b/pages/shop/goods/goods.wxml
@@ -19,12 +19,17 @@
   <view class="title">
     <view class="title_h1">
       <view class="money"><text>￥</text>{{objs.price}}</view>
-      <view class="zk" wx:if="{{objs.original_cost!=0}}">¥{{objs.original_cost}}</view>
+      <!-- <view class="zk" wx:if="{{objs.original_cost!=0}}">¥{{objs.original_cost}}</view> -->
+      <view class="zk">¥{{objs.original_cost}}</view>
     </view>
-    <view class="title_h1 title_2">
-      <view class="cs" bindtap="csjs">{{objs.quality_name}}<image src="/images/jjcc.png" /></view>
-      <view class="fq" wx:if="{{objs.is_credit==1}}">分期</view>
-      <view class="jj" wx:if="{{objs.last_price>objs.markdown}}">降价￥{{objs.markdown}}</view>
+    <view class="title_h1 title_h2">
+      <view class="cs" bindtap="csjs">{{objs.quality_name}}
+        <image src="/images/jjcc.png" />
+      </view>
+      <view class="fq">分期</view>
+      <view class="jj">降价￥{{objs.markdown}}</view>
+      <!-- <view class="fq" wx:if="{{objs.is_credit==1}}">分期</view> -->
+      <!-- <view class="jj" wx:if="{{objs.last_price>objs.markdown&&objs.markdown>0}}">降价￥{{objs.markdown}}</view> -->
     </view>   
     <view class="title_info">
       <text class='b_name'>{{objs.brand_name}}</text>{{objs.goods_title}}
