--- a/components/goodsList/list.wxml
+++ b/components/goodsList/list.wxml
@@ -5,10 +5,14 @@
         <image src="{{item.goods_img}}" />
       </view>
       <view class="goods_h1">
-        <text class="money"><text>￥</text>{{item.price}}</text>
-        <text class="zk" wx:if="{{item.original_cost!=0}}">¥{{item.original_cost}}</text>
-        <text class="jj" wx:if="{{item.is_sales==1}}">降</text>
-        <text class="fq" wx:if="{{item.is_credit==1}}">分期</text>
+        <view >
+          <text class="money"><text>￥</text>{{item.price}}</text>
+          <text class="zk" wx:if="{{item.original_cost!=0}}">¥{{item.original_cost}}</text>
+        </view>
+        <view >
+          <text class="jj" wx:if="{{item.is_sales==1}}">降</text>
+          <text class="fq" wx:if="{{item.is_credit==1}}">分期</text>
+        </view>
 
       </view>
       <view class="goods_zk">
