--- a/app.wxss
+++ b/app.wxss
@@ -37,7 +37,7 @@ image {
 }
 .jinse {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
-   box-shadow:0px 11px 10px 0px rgba(77,77,77,0.1);
+   box-shadow:0px 11rpx 10rpx 0px rgba(77,77,77,0.1);
 }
 .jinse:hover {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
