--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -223,7 +223,7 @@ swiper-item image {
 /* scroll 品牌选择 */
 
 .section_box {
-    height: 160rpx;
+    height: 197rpx;
     box-sizing: border-box;
     width: 100%;
     margin-top: 20rpx;
@@ -257,7 +257,7 @@ swiper-item image {
 
 .section_logo .section_img {
     width: 140rpx;
-    height: 107rpx;
+    height: 140rpx;
     position: relative;
     overflow: hidden;
     /* height: 77rpx; */
@@ -265,10 +265,14 @@ swiper-item image {
 
 .section_img image {
     position: absolute;
-    top: -1px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* top: -1px;
     left: -1px;
     width: calc(100% + 2px);
-    height: calc(100% + 2px);
+    height: calc(100% + 2px); */
 }
 
 .section_logo .section_h1 {
