--- a/app.wxss
+++ b/app.wxss
@@ -24,7 +24,9 @@ image {
     width: 100%;
     height: 100%;
 }
-
+.wxParse-img{
+  width: 100%!important;
+}
 .flex_column {
     display: flex;
     align-items: center;
